# heavy_metal

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
include/: macos.h
poc/: osx.mm  poc_macos.h  poc_main.cpp  readme.md
